--- a/spec/runtime/languages/arithmetic/errors.txt
+++ b/spec/runtime/languages/arithmetic/errors.txt
@@ -3,7 +3,7 @@ recovers from errors at the top level
 =====================================================
 x * * y
 ---
-(expression (variable)) (ERROR '*')
+(variable) (ERROR '*')
 
 =====================================================
 recovers from errors inside parenthesized expressions
@@ -11,5 +11,5 @@ recovers from errors inside parenthesized expressions
 x + (y * + z) * 5
 ---
 (sum
-    (expression (variable))
-    (product (group (ERROR '+')) (expression (number))))
+    (variable)
+    (product (group (ERROR '+')) (number)))
