Add spec for inserting text w/ unicode characters

--- a/spec/runtime/languages/arithmetic/main.txt
+++ b/spec/runtime/languages/arithmetic/main.txt
@@ -12,6 +12,13 @@ x
 ---
 (variable)
 
+====================================
+parses variables with greek letters
+====================================
+φ1
+---
+(variable)
+
 ===================
 parses products
 ===================
